# prompt-lint-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/prompt_lint/: __init__.py  __main__.py
tests/: test_cli.py  test_prompt_lint.py
