[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-lint-py"
version = "0.1.0"
description = "Static lint rules for LLM prompt quality"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["llm", "agent", "prompt", "lint", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/prompt-lint-py"

[tool.setuptools.packages.find]
where = ["src"]
